# template_project

./: .env  Dockerfile  README.md  alembic.ini  config_reader.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  test.py
alembic/: env.py
api/: __init__.py  common.py
bot/handlers/: __init__.py  common.py
bot/keyboards/: __init__.py  builders.py
core/: BaseDb.py  dao.py
core/models/: __init__.py  base.py  user.py
db/: __init__.py
db/models/: user.py
